[WIP] Rework godot ebuilds for porting to other non-linux platforms and USE flags.  Updated *DEPENDS, IUSE.  Added profiles/desc/godot_* files and update make.defaults. Update KEYWORDS to just x86, amd64 Updated generated gnative pkg-config files (*.pc) Updated platform support and checks in the ebuild Apply ccache fix Add prefixes to USE flags to limit USE flags based on platform availability Updated pkg_setup to check platform toolchains Rework options to apply and limit to specific platforms Check toolchain and ebuild packages to see if packages meet app store requirements [WIP] Use and build godot-mono-builds for mono runtime libraries for other non-linux platforms instead of using system ones [WIP] Updated building gdnative (godot-cpp) for multiple platforms Updated documentation of get_fs Updated the metadata.xml to document per-package env-var options [WIP] Updated ebuild to build export templates for mono for other platforms Updated ebuild to allow link with thinlto Add more USE flag descriptions to metadata.xml Added platform specific USE flags. Update parts related to building with gradle when building for Android Removed USE flags without corresponding scons options (like pcre2)

--- a/dev-games/godot/files/godot3-gdnative-server.pc.in
+++ b/dev-games/godot/files/godot3-gdnative-server.pc.in
@@ -2,11 +2,11 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
-release=@release@
+configuration=@configuration@
 bitness=@bitness@
 
 Name: godot3-native-server
 Description: Godot 3.x GDNative server headers and library
 Version: @version@
 Cflags: -std=c11 -fPIC -I${includedir}
-Libs: -lgodot-cpp.linux${release}${bitness}.a
+Libs: -lgodot-cpp.linux${configuration}${bitness}.a
