(WIP) Bump lobe-chat ebuild to 1.71.0. Update lockfile.

--- a/www-apps/lobe-chat/files/1.38.0/package.json
+++ b/www-apps/lobe-chat/files/1.38.0/package.json
@@ -105,13 +105,14 @@
     "@ant-design/icons": "^5.5.1",
     "@ant-design/pro-components": "^2.7.18",
     "@anthropic-ai/sdk": "^0.32.0",
-    "@apidevtools/json-schema-ref-parser": "^11.2.0",
     "@auth/core": "^0.37.0",
     "@aws-sdk/client-bedrock-runtime": "^3.675.0",
     "@aws-sdk/client-s3": "^3.675.0",
     "@aws-sdk/s3-request-presigner": "^3.675.0",
     "@azure/core-rest-pipeline": "1.16.0",
     "@azure/openai": "1.0.0-beta.12",
+    "@babel/helpers": "^7.26.10",
+    "@babel/runtime-corejs3": "^7.26.10",
     "@baiducloud/qianfan": "^0.1.9",
     "@cfworker/json-schema": "^4.0.0",
     "@clerk/localizations": "^3.3.0",
@@ -148,6 +149,7 @@
     "ai": "^3.4.16",
     "antd": "^5.21.4",
     "antd-style": "^3.7.1",
+    "axios": "^1.8.2",
     "brotli-wasm": "^3.0.1",
     "chroma-js": "^2.6.0",
     "dayjs": "^1.11.13",
