--- a/www-apps/lobe-chat/files/1.71.0/package.json
+++ b/www-apps/lobe-chat/files/1.71.0/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lobehub/chat",
-  "version": "1.66.5",
+  "version": "1.71.0",
   "description": "Lobe Chat - an open-source, high-performance chatbot framework that supports speech synthesis, multimodal, and extensible Function Call plugin system. Supports one-click free deployment of your private ChatGPT/LLM web application.",
   "keywords": [
     "framework",
@@ -25,19 +25,23 @@
   "license": "MIT",
   "author": "LobeHub <i@lobehub.com>",
   "sideEffects": false,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "next build",
-    "build:analyze": "ANALYZE=true next build",
-    "build:docker": "DOCKER=true next build && npm run build-sitemap",
     "postbuild": "npm run build-sitemap && npm run build-migrate-db",
     "build-migrate-db": "npm run db:migrate",
     "build-sitemap": "tsx ./scripts/buildSitemapIndex/index.ts",
-    "db:generate": "drizzle-kit generate && npm run db:generate-client",
+    "build:analyze": "ANALYZE=true next build",
+    "build:docker": "DOCKER=true next build && npm run build-sitemap",
+    "db:generate": "drizzle-kit generate && npm run db:generate-client && npm run workflow:dbml",
     "db:generate-client": "tsx ./scripts/migrateClientDB/compile-migrations.ts",
     "db:migrate": "MIGRATION_DB=1 tsx ./scripts/migrateServerDB/index.ts",
     "db:push": "drizzle-kit push",
     "db:push-test": "NODE_ENV=test drizzle-kit push",
     "db:studio": "drizzle-kit studio",
+    "db:visualize": "dbdocs build docs/developer/database-schema.dbml --project lobe-chat",
     "db:z-pull": "drizzle-kit introspect",
     "dev": "next dev --turbopack -p 3010",
     "docs:i18n": "lobe-i18n md && npm run lint:md && npm run lint:mdx",
@@ -59,16 +63,17 @@
     "start": "next start -p 3210",
     "stylelint": "stylelint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "test": "npm run test-app && npm run test-server",
-    "test:update": "vitest -u",
     "test-app": "vitest run --config vitest.config.ts",
     "test-app:coverage": "vitest run --config vitest.config.ts  --coverage",
     "test-server": "vitest run --config vitest.server.config.ts",
     "test-server:coverage": "vitest run --config vitest.server.config.ts --coverage",
+    "test:update": "vitest -u",
     "type-check": "tsc --noEmit",
     "webhook:ngrok": "ngrok http http://localhost:3011",
     "workflow:cdn": "tsx ./scripts/cdnWorkflow/index.ts",
     "workflow:changelog": "tsx ./scripts/changelogWorkflow/index.ts",
     "workflow:countCharters": "tsx scripts/countEnWord.ts",
+    "workflow:dbml": "tsx ./scripts/dbmlWorkflow/index.ts",
     "workflow:docs": "tsx ./scripts/docsWorkflow/index.ts",
     "workflow:i18n": "tsx ./scripts/i18nWorkflow/index.ts",
     "workflow:mdx": "tsx ./scripts/mdxWorkflow/index.ts",
@@ -104,9 +109,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@ant-design/pro-components": "^2.8.3",
-    "@anthropic-ai/sdk": "^0.37.0",
-    "@apidevtools/json-schema-ref-parser": "^11.2.0",
-    "@auth/core": "^0.37.4",
+    "@anthropic-ai/sdk": "^0.39.0",
+    "@auth/core": "^0.38.0",
     "@aws-sdk/client-bedrock-runtime": "^3.723.0",
     "@aws-sdk/client-s3": "^3.723.0",
     "@aws-sdk/s3-request-presigner": "^3.723.0",
@@ -118,19 +122,20 @@
     "@clerk/themes": "^2.2.4",
     "@codesandbox/sandpack-react": "^2.19.10",
     "@cyntler/react-doc-viewer": "^1.17.0",
-    "@electric-sql/pglite": "0.2.13",
+    "@electric-sql/pglite": "0.2.17",
     "@google-cloud/vertexai": "^1.9.2",
-    "@google/generative-ai": "^0.22.0",
+    "@google/generative-ai": "^0.24.0",
     "@huggingface/inference": "^2.8.1",
     "@icons-pack/react-simple-icons": "9.6.0",
     "@khmyznikov/pwa-install": "0.3.9",
     "@langchain/community": "^0.3.22",
+    "@lobechat/web-crawler": "workspace:*",
     "@lobehub/charts": "^1.12.0",
     "@lobehub/chat-plugin-sdk": "^1.32.4",
     "@lobehub/chat-plugins-gateway": "^1.9.0",
     "@lobehub/icons": "^1.73.1",
     "@lobehub/tts": "^1.28.0",
-    "@lobehub/ui": "^1.165.2",
+    "@lobehub/ui": "^1.165.5",
     "@neondatabase/serverless": "^0.10.4",
     "@next/third-parties": "^15.2.0",
     "@react-spring/web": "^9.7.5",
@@ -157,13 +162,15 @@
     "debug": "^4.4.0",
     "dexie": "^3.2.7",
     "diff": "^7.0.0",
-    "drizzle-orm": "^0.39.0",
+    "drizzle-orm": "^0.40.0",
     "drizzle-zod": "^0.5.1",
+    "epub2": "^3.0.2",
     "esbuild": "^0.25.0",
     "fast-deep-equal": "^3.1.3",
     "file-type": "^20.0.0",
-    "framer-motion": "^11.16.0",
+    "framer-motion": "^12.0.0",
     "gpt-tokenizer": "^2.8.1",
+    "html-to-text": "^9.0.5",
     "i18next": "^24.2.1",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-resources-to-backend": "^1.2.1",
@@ -176,7 +183,7 @@
     "langfuse": "3.29.1",
     "langfuse-core": "3.29.1",
     "lodash-es": "^4.17.21",
-    "lucide-react": "^0.475.0",
+    "lucide-react": "^0.479.0",
     "mammoth": "^1.9.0",
     "mdast-util-to-markdown": "^2.1.2",
     "modern-screenshot": "^4.5.5",
@@ -213,7 +220,7 @@
     "react-lazy-load": "^4.0.1",
     "react-pdf": "^9.2.1",
     "react-rnd": "^10.4.14",
-    "react-scan": "^0.1.0",
+    "react-scan": "^0.2.0",
     "react-virtuoso": "^4.12.3",
     "react-wrap-balancer": "^1.1.1",
     "remark": "^15.0.1",
@@ -253,7 +260,7 @@
     "@lobehub/i18n-cli": "^1.20.3",
     "@lobehub/lint": "^1.25.5",
     "@lobehub/seo-cli": "^1.4.3",
-    "@next/bundle-analyzer": "^15.2.0",
+    "@next/bundle-analyzer": "^15.2.2",
     "@next/eslint-plugin-next": "^15.2.0",
     "@peculiar/webcrypto": "^1.5.0",
     "@semantic-release/exec": "^6.0.3",
@@ -287,8 +294,10 @@
     "commitlint": "^19.6.1",
     "consola": "^3.3.3",
     "crypto-js": "^4.2.0",
+    "dbdocs": "^0.14.3",
     "dotenv": "^16.4.7",
     "dpdm-fast": "^1.0.7",
+    "drizzle-dbml-generator": "^0.10.0",
     "drizzle-kit": "^0.30.1",
     "eslint": "^8.57.1",
     "eslint-plugin-mdx": "^3.1.5",
@@ -324,7 +333,7 @@
     "vitest": "^1.6.1",
     "vitest-canvas-mock": "^0.3.3"
   },
-  "packageManager": "pnpm@9.15.5",
+  "packageManager": "pnpm@9.15.7",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
