--- a/www-apps/lobe-chat/files/1.38.0/package.json
+++ b/www-apps/lobe-chat/files/1.38.0/package.json
@@ -112,6 +112,7 @@
     "@azure/core-rest-pipeline": "1.16.0",
     "@azure/openai": "1.0.0-beta.12",
     "@babel/helpers": "^7.26.10",
+    "@babel/runtime": "^7.26.10",
     "@babel/runtime-corejs3": "^7.26.10",
     "@baiducloud/qianfan": "^0.1.9",
     "@cfworker/json-schema": "^4.0.0",
