--- a/www-apps/lobe-chat/files/1.71.0/package.json
+++ b/www-apps/lobe-chat/files/1.71.0/package.json
@@ -110,6 +110,7 @@
     "@ant-design/icons": "^5.5.2",
     "@ant-design/pro-components": "^2.8.3",
     "@anthropic-ai/sdk": "^0.39.0",
+    "@apidevtools/json-schema-ref-parser": "^11.2.0",
     "@auth/core": "^0.38.0",
     "@aws-sdk/client-bedrock-runtime": "^3.723.0",
     "@aws-sdk/client-s3": "^3.723.0",
@@ -324,6 +325,7 @@
     "remark-parse": "^11.0.0",
     "semantic-release": "^21.1.2",
     "serwist": "^9.0.11",
+    "snowflake-sdk": "^2.0.2",
     "stylelint": "^15.11.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
