--- a/www-apps/lobe-chat/files/1.38.0/package.json
+++ b/www-apps/lobe-chat/files/1.38.0/package.json
@@ -105,6 +105,7 @@
     "@ant-design/icons": "^5.5.1",
     "@ant-design/pro-components": "^2.7.18",
     "@anthropic-ai/sdk": "^0.32.0",
+    "@apidevtools/json-schema-ref-parser": "^11.2.0",
     "@auth/core": "^0.37.0",
     "@aws-sdk/client-bedrock-runtime": "^3.675.0",
     "@aws-sdk/client-s3": "^3.675.0",
