(WIP) Bump RisuAI ebuild to 154.0.0

--- a/games-rpg/RisuAI/files/154.0.0/package.json
+++ b/games-rpg/RisuAI/files/154.0.0/package.json
@@ -67,6 +67,8 @@
     "ml-distance": "^4.0.1",
     "mobile-drag-drop": "3.0.0-rc.0",
     "msgpackr": "1.10.1",
+    "node-addon-api": "^8.3.1",
+    "node-gyp": "^11.1.0",
     "node-html-parser": "^6.1.12",
     "ollama": "^0.5.0",
     "pdfjs-dist": "^4.0.379",
@@ -76,6 +78,7 @@
     "png-chunks-extract": "^1.0.0",
     "rfdc": "^1.4.1",
     "rollup": "^3.29.4",
+    "sharp": "^0.33.5",
     "showdown": "^2.1.0",
     "sortablejs": "^1.15.2",
     "streamsaver": "^2.0.6",
@@ -91,6 +94,7 @@
   "devDependencies": {
     "@capacitor/assets": "^3.0.4",
     "@capacitor/cli": "^5.6.0",
+    "@rollup/plugin-strip": "^3.0.4",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@swc/core": "1.5.7",
     "@tailwindcss/typography": "^0.5.10",
@@ -111,7 +115,7 @@
     "@types/uuid": "^9.0.7",
     "@types/wicg-file-system-access": "^2020.9.8",
     "autoprefixer": "^10.4.16",
-    "esbuild": "^0.25.0",
+    "esbuild": "^0.25.1",
     "internal-ip": "^7.0.0",
     "postcss": "^8.4.33",
     "svelte": "^5.1.9",
