--- a/gui-apps/windowpet/files/0.0.8/package.json
+++ b/gui-apps/windowpet/files/0.0.8/package.json
@@ -12,6 +12,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.10",
     "@mantine/core": "^7.10.0",
     "@mantine/modals": "^7.10.0",
     "@mantine/notifications": "^7.10.0",
@@ -42,7 +43,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.0",
-    "esbuild": "^0.25.0",
+    "esbuild": "^0.25.1",
     "postcss-preset-mantine": "^1.15.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
