--- a/app-misc/amica/files/0.2.1_p20250311/package.json
+++ b/app-misc/amica/files/0.2.1_p20250311/package.json
@@ -47,12 +47,13 @@
     "filepond": "^4.31.4",
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-preview": "^4.6.12",
+    "formidable": "^3.5.2",
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "iwer": "^1.0.4",
     "lil-gui": "^0.19.2",
     "next": "^14.2.13",
-    "node-addon-api": "^8.3.0",
+    "node-addon-api": "^8.3.1",
     "node-gyp": "^11.1.0",
     "ogg-opus-decoder": "^1.6.14",
     "opus-recorder": "^8.0.5",
@@ -63,9 +64,11 @@
     "react-webcam": "^7.2.0",
     "sharp": "^0.32.6",
     "stats.js": "^0.17.0",
+    "telegraf": "^4.16.3",
     "three": "^0.169.0",
     "three-mesh-bvh": "^0.8.2",
     "three.quarks": "^0.15.5",
+    "twitter-api-v2": "^1.19.0",
     "typescript-collections": "^1.3.3",
     "viem": "^2.21.37",
     "wagmi": "^2.12.25",
@@ -80,13 +83,14 @@
     "@tauri-apps/cli": "^1.6.2",
     "@types/dom-speech-recognition": "^0.0.4",
     "@types/file-saver": "^2.0.7",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.169.0",
     "copy-webpack-plugin": "^12.0.2",
-    "esbuild": "^0.25.0",
-    "eslint": "^9.20.1",
+    "esbuild": "^0.25.1",
+    "eslint": "^9.22.0",
     "eslint-config-next": "^14.2.13",
     "eslint-config-prettier": "^9.1.0",
     "fast-glob": "^3.3.2",
