--- a/app-misc/amica/files/0.2.1_p20250311/package.json
+++ b/app-misc/amica/files/0.2.1_p20250311/package.json
@@ -19,6 +19,7 @@
     "splash": "cp ./public/splashscreen.html out/"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.10",
     "@charcoal-ui/icons": "^3.15.0",
     "@charcoal-ui/theme": "^3.15.0",
     "@ducanh2912/next-pwa": "^10.2.9",
@@ -53,8 +54,6 @@
     "iwer": "^1.0.4",
     "lil-gui": "^0.19.2",
     "next": "^14.2.13",
-    "node-addon-api": "^8.3.1",
-    "node-gyp": "^11.1.0",
     "ogg-opus-decoder": "^1.6.14",
     "opus-recorder": "^8.0.5",
     "react": "^18.3.1",
@@ -62,7 +61,6 @@
     "react-filepond": "^7.1.2",
     "react-i18next": "^15.0.2",
     "react-webcam": "^7.2.0",
-    "sharp": "^0.32.6",
     "stats.js": "^0.17.0",
     "telegraf": "^4.16.3",
     "three": "^0.169.0",
