Update amica ebuild

--- a/app-misc/amica/files/0.2.1_p20250311/package.json
+++ b/app-misc/amica/files/0.2.1_p20250311/package.json
@@ -19,6 +19,7 @@
     "splash": "cp ./public/splashscreen.html out/"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.10",
     "@charcoal-ui/icons": "^3.15.0",
     "@charcoal-ui/theme": "^3.15.0",
     "@ducanh2912/next-pwa": "^10.2.9",
@@ -42,6 +43,7 @@
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "dexie": "^4.0.8",
+    "dompurify": "^3.2.4",
     "file-saver": "^2.0.5",
     "filepond": "^4.31.4",
     "filepond-plugin-file-validate-type": "^1.2.9",
@@ -53,6 +55,7 @@
     "lil-gui": "^0.19.2",
     "next": "^14.2.13",
     "ogg-opus-decoder": "^1.6.14",
+    "onnxruntime-web": "^1.14.0",
     "opus-recorder": "^8.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -80,18 +83,20 @@
     "@types/dom-speech-recognition": "^0.0.4",
     "@types/file-saver": "^2.0.7",
     "@types/formidable": "^3.4.5",
-    "@types/node": "^22.7.4",
+    "@types/node": "^22.7.5",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.169.0",
     "copy-webpack-plugin": "^12.0.2",
-    "esbuild": "^0.24.0",
+    "esbuild": "^0.25.1",
+    "eslint": "^9.22.0",
     "eslint-config-next": "^14.2.13",
     "eslint-config-prettier": "^9.1.0",
     "fast-glob": "^3.3.2",
     "i18next-parser": "^9.0.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "node-gyp": "^11.1.0",
     "parcel": "^2.12.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
