--- a/games-rpg/RisuAI/files/155.0.0/Cargo.toml
+++ b/games-rpg/RisuAI/files/155.0.0/Cargo.toml
@@ -31,6 +31,7 @@ tauri-plugin-dialog = "2"
 tauri-plugin-process = "2"
 tauri-plugin-shell = "2"
 tauri-plugin-http = "2"
+hyper-tls = "^0.6"
 [target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
 tauri-plugin-deep-link = "2"
 
