--- a/www-apps/lobe-chat/files/1.74.0/package.json
+++ b/www-apps/lobe-chat/files/1.74.0/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lobehub/chat",
-  "version": "1.71.0",
+  "version": "1.74.0",
   "description": "Lobe Chat - an open-source, high-performance chatbot framework that supports speech synthesis, multimodal, and extensible Function Call plugin system. Supports one-click free deployment of your private ChatGPT/LLM web application.",
   "keywords": [
     "framework",
@@ -65,8 +65,8 @@
     "test": "npm run test-app && npm run test-server",
     "test-app": "vitest run --config vitest.config.ts",
     "test-app:coverage": "vitest run --config vitest.config.ts  --coverage",
-    "test-server": "vitest run --config vitest.server.config.ts",
-    "test-server:coverage": "vitest run --config vitest.server.config.ts --coverage",
+    "test-server": "TEST_SERVER_DB=1 vitest run --config vitest.server.config.ts",
+    "test-server:coverage": "TEST_SERVER_DB=1 vitest run --config vitest.server.config.ts --coverage",
     "test:update": "vitest -u",
     "type-check": "tsc --noEmit",
     "webhook:ngrok": "ngrok http http://localhost:3011",
@@ -136,7 +136,7 @@
     "@lobehub/chat-plugins-gateway": "^1.9.0",
     "@lobehub/icons": "^1.73.1",
     "@lobehub/tts": "^1.28.0",
-    "@lobehub/ui": "^1.165.5",
+    "@lobehub/ui": "^1.165.8",
     "@neondatabase/serverless": "^0.10.4",
     "@next/third-parties": "^15.2.0",
     "@react-spring/web": "^9.7.5",
@@ -184,12 +184,12 @@
     "langfuse": "3.29.1",
     "langfuse-core": "3.29.1",
     "lodash-es": "^4.17.21",
-    "lucide-react": "^0.479.0",
+    "lucide-react": "^0.482.0",
     "mammoth": "^1.9.0",
     "mdast-util-to-markdown": "^2.1.2",
     "modern-screenshot": "^4.5.5",
     "nanoid": "^5.0.9",
-    "next": "^15.1.7",
+    "next": "^15.2.3",
     "next-auth": "beta",
     "next-mdx-remote": "^5.0.0",
     "nextjs-toploader": "^3.7.15",
@@ -232,7 +232,7 @@
     "rtl-detect": "^1.1.2",
     "semver": "^7.6.3",
     "sharp": "^0.30.7",
-    "shiki": "^1.26.1",
+    "shiki": "^3.2.1",
     "stripe": "^16.12.0",
     "superjson": "^2.2.2",
     "svix": "^1.45.1",
@@ -261,7 +261,7 @@
     "@lobehub/i18n-cli": "^1.20.3",
     "@lobehub/lint": "^1.25.5",
     "@lobehub/seo-cli": "^1.4.3",
-    "@next/bundle-analyzer": "^15.2.2",
+    "@next/bundle-analyzer": "^15.2.3",
     "@next/eslint-plugin-next": "^15.2.0",
     "@peculiar/webcrypto": "^1.5.0",
     "@semantic-release/exec": "^6.0.3",
@@ -290,7 +290,7 @@
     "@types/unist": "^3.0.3",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
-    "@vitest/coverage-v8": "~1.2.2",
+    "@vitest/coverage-v8": "^3.0.9",
     "ajv-keywords": "^5.1.0",
     "commitlint": "^19.6.1",
     "consola": "^3.3.3",
@@ -335,7 +335,7 @@
     "vitest": "^1.6.1",
     "vitest-canvas-mock": "^0.3.3"
   },
-  "packageManager": "pnpm@9.15.7",
+  "packageManager": "pnpm@9.15.9",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
