Update Cargo.* files and gst-plugins-rs ebuild

--- a/media-plugins/gst-plugins-rs/files/1.26.0/generic/file/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/generic/file/Cargo.toml
@@ -9,7 +9,7 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-url = "2"
+url = "^2"
 gst.workspace = true
 gst-base.workspace = true
 
