--- a/media-plugins/gst-plugins-rs/files/1.26.0/generic/gopbuffer/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/generic/gopbuffer/Cargo.toml
@@ -9,7 +9,7 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-anyhow = "1"
+anyhow = "^1"
 gst = { workspace = true, features = ["v1_18"] }
 gst-video = { workspace = true, features = ["v1_18"] }
 
