--- a/media-plugins/gst-plugins-rs/files/1.26.0/generic/originalbuffer/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/generic/originalbuffer/Cargo.toml
@@ -12,7 +12,7 @@ rust-version.workspace = true
 glib.workspace = true
 gst.workspace = true
 gst-video.workspace = true
-atomic_refcell = "0.1"
+atomic_refcell = "^0.1"
 
 [lib]
 name = "gstoriginalbuffer"
