--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/reqwest/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/reqwest/Cargo.toml
@@ -9,20 +9,20 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-url = "2.1"
-reqwest = { version = "0.12", features = ["cookies", "gzip"] }
-futures = "0.3"
-headers = "0.4"
-mime = "0.3"
+url = "^2.1"
+reqwest = { version = "^0.12", features = ["cookies", "gzip"] }
+futures = "^0.3"
+headers = "^0.4"
+mime = "^0.3"
 gst.workspace = true
 gst-base.workspace = true
-tokio = { version = "1.0", default-features = false, features = ["time", "rt-multi-thread"] }
+tokio = { version = "^1.0", default-features = false, features = ["time", "rt-multi-thread"] }
 
 [dev-dependencies]
-hyper = { version = "1.0", features = ["server"] }
-http-body-util = "0.1.1"
-bytes = "1.0"
-pin-project-lite = "0.2"
+hyper = { version = "^1.0", features = ["server"] }
+http-body-util = "=0.1.1"
+bytes = "^1.0"
+pin-project-lite = "^0.2"
 gst.workspace = true
 
 [lib]
