--- a/media-plugins/gst-plugins-rs/files/1.26.0/generic/sodium/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/generic/sodium/Cargo.toml
@@ -11,18 +11,18 @@ rust-version.workspace = true
 [dependencies]
 gst.workspace = true
 gst-base.workspace = true
-sodiumoxide = "0.2.1"
-hex = "0.4"
-smallvec = "1.0"
+sodiumoxide = "^0.2.1"
+hex = "^0.4"
+smallvec = "^1.0"
 
 # example
-clap = { version = "4", optional = true, features = ["derive"] }
-serde = { version = "1.0", features = ["derive"], optional = true }
-serde_json = { version = "1.0", optional = true }
+clap = { version = "^4", optional = true, features = ["derive"] }
+serde = { version = "^1.0", features = ["derive"], optional = true }
+serde_json = { version = "^1.0", optional = true }
 
 [dev-dependencies]
-pretty_assertions = "1"
-rand = "0.9"
+pretty_assertions = "^1"
+rand = "^0.9"
 gst-check.workspace = true
 gst-app.workspace = true
 
