--- a/media-plugins/gst-plugins-rs/files/1.26.0/mux/flavors/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/mux/flavors/Cargo.toml
@@ -12,11 +12,11 @@ description = "GStreamer Rust FLV Plugin"
 gst.workspace = true
 gst-base.workspace = true
 gst-audio.workspace = true
-num-rational = { version = "0.4", default-features = false, features = [] }
-nom = "7"
+num-rational = { version = "^0.4", default-features = false, features = [] }
+nom = "^7"
 flavors = { git = "https://github.com/rust-av/flavors" }
-byteorder = "1.0"
-smallvec = "1.0"
+byteorder = "^1.0"
+smallvec = "^1.0"
 
 [lib]
 name = "gstrsflv"
