--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/mpegtslive/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/mpegtslive/Cargo.toml
@@ -10,9 +10,9 @@ rust-version.workspace = true
 
 [dependencies]
 gst.workspace = true
-bitstream-io = "2.3"
-anyhow = "1"
-smallvec = "1"
+bitstream-io = "^2.3"
+anyhow = "^1"
+smallvec = "^1"
 
 [dev-dependencies]
 
