--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/raptorq/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/raptorq/Cargo.toml
@@ -12,11 +12,11 @@ rust-version.workspace = true
 gst.workspace = true
 gst-base.workspace = true
 gst-rtp.workspace = true
-raptorq = "2"
+raptorq = "^2"
 
 [dev-dependencies]
 gst-check = { workspace = true, features = ["v1_18"] }
-rand = "0.9"
+rand = "^0.9"
 
 [lib]
 name = "gstraptorq"
