--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/webrtc/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/webrtc/Cargo.toml
@@ -21,55 +21,55 @@ gst-utils.workspace = true
 gst-base.workspace = true
 uuid = { version = "1", features = ["v4"] }
 
-anyhow = "1"
-chrono = "0.4"
-thiserror = "2"
-futures = "0.3"
-itertools = "0.14"
-tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
-tokio-native-tls = "0.3.0"
-tokio-stream = "0.1.11"
-async-tungstenite = { version = "0.29", features = ["tokio-runtime", "tokio-native-tls", "url"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-fastrand = "2.0"
+anyhow = "^1"
+chrono = "^0.4"
+thiserror = "^2"
+futures = "^0.3"
+itertools = "^0.14"
+tokio = { version = "^1", features = ["fs", "macros", "rt-multi-thread", "time"] }
+tokio-native-tls = "^0.3.0"
+tokio-stream = "=0.1.11"
+async-tungstenite = { version = "^0.29", features = ["tokio-runtime", "tokio-native-tls", "url"] }
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
+fastrand = "^2.0"
 gst_plugin_webrtc_protocol = { path="protocol", package = "gst-plugin-webrtc-signalling-protocol" }
 gst_plugin_webrtc_signalling = { path="signalling", package = "gst-plugin-webrtc-signalling" }
-human_bytes = "0.4"
-rand = "0.9"
-url = "2"
+human_bytes = "^0.4"
+rand = "^0.9"
+url = "^2"
 
-aws-config = { version = "1.0", optional = true }
-aws-types = { version = "1.0", optional = true }
-aws-credential-types = { version = "1.0", optional = true }
-aws-sigv4 = { version = "1.0", optional = true }
-aws-smithy-http = { version = "0.60", features = [ "rt-tokio" ], optional = true }
-aws-smithy-types = { version = "1.0", optional = true }
-aws-sdk-kinesisvideo = { version =  "1.0", optional = true }
-aws-sdk-kinesisvideosignaling = { version = "1.0", optional = true }
-http = { version = "1.0", optional = true }
-data-encoding = {version = "2.3.3", optional = true }
-url-escape = { version = "0.1.1", optional = true }
+aws-config = { version = "^1.0", optional = true }
+aws-types = { version = "^1.0", optional = true }
+aws-credential-types = { version = "^1.0", optional = true }
+aws-sigv4 = { version = "^1.0", optional = true }
+aws-smithy-http = { version = "^0.60", features = [ "rt-tokio" ], optional = true }
+aws-smithy-types = { version = "^1.0", optional = true }
+aws-sdk-kinesisvideo = { version =  "^1.0", optional = true }
+aws-sdk-kinesisvideosignaling = { version = "^1.0", optional = true }
+http = { version = "^1.0", optional = true }
+data-encoding = {version = "^2.3.3", optional = true }
+url-escape = { version = "=0.1.1", optional = true }
 
-reqwest = { version = "0.11", features = ["default-tls"], optional = true }
-parse_link_header = {version = "0.4", features = ["url"]}
-async-recursion = { version = "1.0.0", optional = true }
+reqwest = { version = "^0.11", features = ["default-tls"], optional = true }
+parse_link_header = {version = "^0.4", features = ["url"]}
+async-recursion = { version = "=1.0.0", optional = true }
 
 livekit-protocol = { version = "0.3, < 0.3.4", optional = true }
-livekit-api = { version = "0.3", default-features = false, features = ["signal-client", "access-token", "native-tls"], optional = true }
+livekit-api = { version = "^0.3", default-features = false, features = ["signal-client", "access-token", "native-tls"], optional = true }
 
-warp = {version = "0.3", optional = true, features = ["tls"] }
-ctrlc = {version = "3.4.0", optional = true }
+warp = {version = "^0.3", optional = true, features = ["tls"] }
+ctrlc = {version = "=3.4.0", optional = true }
 
-tracing = { version = "0.1", features = ["log"] }
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
-tracing-log = "0.2"
+tracing = { version = "^0.1", features = ["log"] }
+tracing-subscriber = { version = "^0.3", features = ["registry", "env-filter"] }
+tracing-log = "^0.2"
 
 [dev-dependencies]
 gst-plugin-rtp = { path = "../rtp" }
-tokio = { version = "1", features = ["signal"] }
-clap = { version = "4", features = ["derive"] }
-regex = "1"
+tokio = { version = "^1", features = ["signal"] }
+clap = { version = "^4", features = ["derive"] }
+regex = "^1"
 
 [lib]
 name = "gstrswebrtc"
