--- a/media-plugins/gst-plugins-rs/files/1.26.0/utils/fallbackswitch/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/utils/fallbackswitch/Cargo.toml
@@ -16,8 +16,8 @@ gst-video.workspace = true
 gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true }
 gtk = { workspace = true, optional = true }
 gio = { workspace = true, optional = true }
-parking_lot = "0.12"
-rand = "0.9"
+parking_lot = "^0.12"
+rand = "^0.9"
 
 [dev-dependencies]
 gst-app.workspace = true
