--- a/media-plugins/gst-plugins-rs/files/1.26.0/utils/tracers/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/utils/tracers/Cargo.toml
@@ -10,23 +10,23 @@ rust-version.workspace = true
 
 [dependencies]
 gst.workspace = true
-anyhow = "1"
-regex = "1"
-atomic_refcell = "0.1"
-pcap-file = "2"
-etherparse = "0.16.0"
-chrono = "0.4.35"
-walkdir = "2"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-tokio-stream = "0.1.11"
-async-tungstenite = { version = "0.29", features = ["tokio-runtime", "url"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-url = "2"
-futures = "0.3"
+anyhow = "^1"
+regex = "^1"
+atomic_refcell = "^0.1"
+pcap-file = "^2"
+etherparse = "=0.16.0"
+chrono = "^0.4.35"
+walkdir = "^2"
+tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
+tokio-stream = "=0.1.11"
+async-tungstenite = { version = "^0.29", features = ["tokio-runtime", "url"] }
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
+url = "^2"
+futures = "^0.3"
 
 [target.'cfg(unix)'.dependencies]
-signal-hook = "0.3"
+signal-hook = "^0.3"
 
 [lib]
 name = "gstrstracers"
