--- a/media-plugins/gst-plugins-rs/files/1.26.0/video/closedcaption/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/video/closedcaption/Cargo.toml
@@ -9,33 +9,33 @@ description = "GStreamer Rust Closed Caption Plugin"
 repository.workspace = true
 
 [dependencies]
-anyhow = "1"
-either = "1"
-uuid = { version = "1.0", features = ["v4"] }
-chrono = "0.4.23"
-atomic_refcell = "0.1"
+anyhow = "^1"
+either = "^1"
+uuid = { version = "^1.0", features = ["v4"] }
+chrono = "^0.4.23"
+atomic_refcell = "^0.1"
 cairo-rs.workspace = true
 pango.workspace = true
 pangocairo.workspace = true
-byteorder = "1"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = { version = "1.0", features = ["raw_value"] }
-cdp-types = "0.2"
-cea708-types = "0.3.5"
-cea608-types = "0.1.1"
+byteorder = "^1"
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = { version = "^1.0", features = ["raw_value"] }
+cdp-types = "^0.2"
+cea708-types = "=0.3.5"
+cea608-types = "=0.1.1"
 gst = { workspace = true, features = ["v1_20"]}
 gst-base = { workspace = true, features = ["v1_22"]}
 gst-video = { workspace = true, features = ["v1_16"]}
-winnow = "0.7"
-smallvec = "1"
-bitstream-io = "2.3"
-itertools = "0.14"
+winnow = "^0.7"
+smallvec = "^1"
+bitstream-io = "^2.3"
+itertools = "^0.14"
 
 [dev-dependencies]
-pretty_assertions = "1"
-rand = { version = "0.9", features = ["small_rng"] }
+pretty_assertions = "^1"
+rand = { version = "^0.9", features = ["small_rng"] }
 gst-check.workspace = true
-clap = { version = "4", features = ["derive"] }
+clap = { version = "^4", features = ["derive"] }
 
 [lib]
 name = "gstrsclosedcaption"
