--- a/media-plugins/gst-plugins-rs/files/1.26.0/video/ffv1/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/video/ffv1/Cargo.toml
@@ -9,7 +9,7 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-byte-slice-cast = "1"
+byte-slice-cast = "^1"
 ffv1 = { git = "https://github.com/rust-av/ffv1.git", rev = "bd9eabfc14c9ad53c37b32279e276619f4390ab8" }
 gst = { workspace = true, features = ["v1_18"] }
 gst-video = { workspace = true, features = ["v1_18"] }
