--- a/media-plugins/gst-plugins-rs/files/1.26.0/video/webp/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/video/webp/Cargo.toml
@@ -9,12 +9,12 @@ description = "GStreamer WebP Plugin"
 repository.workspace = true
 
 [dependencies]
-libwebp-sys2 = { version = "0.1.2", default-features = false, features = ["demux", "0_5"] }
+libwebp-sys2 = { version = "=0.1.2", default-features = false, features = ["demux", "0_5"] }
 gst.workspace = true
 gst-video.workspace = true
 
 [dev-dependencies]
-pretty_assertions = "1"
+pretty_assertions = "^1"
 gst-check.workspace = true
 
 [lib]
