Update open-webui ebuild

--- a/www-apps/open-webui/files/open-webui.conf
+++ b/www-apps/open-webui/files/open-webui.conf
@@ -1,3 +1,4 @@
+## Documentation:  https://docs.openwebui.com/getting-started/env-configuration
 ## Basis ##
 export ENV ENV="prod"
 export PORT=8080
@@ -16,21 +17,21 @@ export ANONYMIZED_TELEMETRY="false"
 
 ## Whisper TTS model settings ##
 export WHISPER_MODEL="base"
-export WHISPER_MODEL_DIR="/opt/open-webui/backend/data/cache/whisper/models"
+export WHISPER_MODEL_DIR="/var/lib/open-webui/data/cache/whisper/models"
 
 ## RAG Embedding model settings ##
 export USE_EMBEDDING_MODEL="sentence-transformers/all-MiniLM-L6-v2"
 export USE_RERANKING_MODEL=""
 export RAG_EMBEDDING_MODEL="${USE_EMBEDDING_MODEL_DOCKER}"
 export RAG_RERANKING_MODEL="${USE_RERANKING_MODEL_DOCKER}"
-export SENTENCE_TRANSFORMERS_HOME="/opt/open-webui/backend/data/cache/embedding/models"
+export SENTENCE_TRANSFORMERS_HOME="/var/lib/open-webui/data/cache/embedding/models"
 
 ## Tiktoken model settings ##
 export TIKTOKEN_ENCODING_NAME="cl100k_base"
-export TIKTOKEN_CACHE_DIR="/opt/open-webui/backend/data/cache/tiktoken"
+export TIKTOKEN_CACHE_DIR="/var/lib/open-webui/data/cache/tiktoken"
 
 ## Hugging Face download cache ##
-export HF_HOME="/opt/open-webui/backend/data/cache/embedding/models"
+export HF_HOME="/var/lib/open-webui/data/cache/embedding/models"
 
 ## Torch Extensions ##
-# export TORCH_EXTENSIONS_DIR="/.cache/torch_extensions"
+export TORCH_EXTENSIONS_DIR="/var/lib/open-webui/data/cache/torch_extensions"
