Update open-webui ebuild

--- a/www-apps/open-webui/files/open-webui.conf
+++ b/www-apps/open-webui/files/open-webui.conf
@@ -1,8 +1,8 @@
 ## Documentation:  https://docs.openwebui.com/getting-started/env-configuration
 ## Basis ##
 export ENV ENV="prod"
-export PORT=8080
-export HOST="127.0.0.1"
+export PORT=@OPEN_WEBUI_PORT@
+export HOST="@OPEN_WEBUI_HOST@"
 
 ## Basis URL Config ##
 export OLLAMA_BASE_URL="http://localhost:11434"
