--- a/media-plugins/gst-plugins-rs/files/1.26.0/mux/mp4/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/mux/mp4/Cargo.toml
@@ -9,14 +9,14 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-anyhow = "^1"
+anyhow = "1"
 gst = { workspace = true,  features = ["v1_18"] }
 gst-base = { workspace = true, features = ["v1_18"] }
 gst-audio = { workspace = true, features = ["v1_18"] }
 gst-video = { workspace = true, features = ["v1_20"] }
 gst-pbutils = { workspace = true, features = ["v1_18"] }
-bitstream-io = "^2.3"
-num-integer = { version = "^0.1", default-features = false, features = [] }
+bitstream-io = "2.3"
+num-integer = { version = "0.1", default-features = false, features = [] }
 
 [lib]
 name = "gstmp4"
@@ -24,8 +24,8 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [dev-dependencies]
-tempfile = "^3"
-url = "^2"
+tempfile = "3"
+url = "2"
 
 [build-dependencies]
 gst-plugin-version-helper.workspace = true
