--- a/media-plugins/gst-plugins-rs/files/1.26.0/video/png/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/video/png/Cargo.toml
@@ -11,8 +11,8 @@ description = "GStreamer Rust PNG encoder/decoder"
 [dependencies]
 gst.workspace = true
 gst-video.workspace = true
-png = "=0.17.2"
-parking_lot = "^0.12"
+png = "0.17.2"
+parking_lot = "0.12"
 
 [dev-dependencies]
 gst-check.workspace = true
