--- a/media-plugins/gst-plugins-rs/files/1.26.0/video/vvdec/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/video/vvdec/Cargo.toml
@@ -12,7 +12,7 @@ description = "GStreamer VVdeC VVC/H.266 decoder plugin"
 gst.workspace = true
 gst-audio.workspace = true
 gst-video = { workspace = true, features = ["v1_26"] }
-vvdec = { version = "^0.6" }
+vvdec = { version = "0.6" }
 
 [dev-dependencies]
 gst-check.workspace = true
