--- a/media-plugins/gst-plugins-rs/files/1.26.0/audio/audiofx/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/audio/audiofx/Cargo.toml
@@ -12,15 +12,15 @@ rust-version.workspace = true
 gst = { workspace = true, features = ["v1_20"] }
 gst-base = { workspace = true, features = ["v1_20"] }
 gst-audio = { workspace = true, features = ["v1_20"] }
-anyhow = "^1"
-byte-slice-cast = "^1.0"
-num-traits = "=0.2.19"
-ebur128 = "^0.1"
-hrtf = "^0.8"
-nnnoiseless = { version = "^0.5", default-features = false }
-smallvec = "^1"
-atomic_refcell = "^0.1"
-rayon = "^1.5"
+anyhow = "1"
+byte-slice-cast = "1.0"
+num-traits = "0.2"
+ebur128 = "0.1"
+hrtf = "0.8"
+nnnoiseless = { version = "0.5", default-features = false }
+smallvec = "1"
+atomic_refcell = "0.1"
+rayon = "1.5"
 
 [lib]
 name = "gstrsaudiofx"
