--- a/media-plugins/gst-plugins-rs/files/1.26.0/audio/csound/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/audio/csound/Cargo.toml
@@ -12,8 +12,8 @@ description = "GStreamer Audio Filter plugin based on Csound"
 gst.workspace = true
 gst-base.workspace = true
 gst-audio.workspace = true
-csound = "=0.1.8"
-byte-slice-cast = "^1.0"
+csound = "0.1.8"
+byte-slice-cast = "1.0"
 
 [dev-dependencies]
 gst-check.workspace = true
