--- a/media-plugins/gst-plugins-rs/files/1.26.0/audio/speechmatics/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/audio/speechmatics/Cargo.toml
@@ -9,17 +9,17 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-futures = "^0.3"
+futures = "0.3"
 gst.workspace = true
 gst-base.workspace = true
 gst-audio = { workspace = true, features = ["v1_16"] }
-tokio = { version = "^1", features = [ "full" ] }
-async-tungstenite = { version = "^0.29", features = ["tokio", "tokio-runtime", "tokio-native-tls"] }
-serde = { version = "^1", features = ["derive"] }
-serde_json = "^1"
-atomic_refcell = "^0.1"
-http = { version = "^1.0" }
-url = "^2"
+tokio = { version = "1", features = [ "full" ] }
+async-tungstenite = { version = "0.29", features = ["tokio", "tokio-runtime", "tokio-native-tls"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+atomic_refcell = "0.1"
+http = { version = "1.0" }
+url = "2"
 
 [lib]
 name = "gstspeechmatics"
