--- a/media-plugins/gst-plugins-rs/files/1.26.0/audio/spotify/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/audio/spotify/Cargo.toml
@@ -11,13 +11,13 @@ rust-version.workspace = true
 [dependencies]
 gst.workspace = true
 gst-base.workspace = true
-librespot-core = "^0.6"
-librespot-metadata = "^0.6"
-librespot-playback = { version = "^0.6", features = ['passthrough-decoder'] }
-tokio = { version = "^1.0", features = ["rt-multi-thread"] }
-futures = "^0.3"
-anyhow = "^1.0"
-url = "^2.3"
+librespot-core = "0.6"
+librespot-metadata = "0.6"
+librespot-playback = { version = "0.6", features = ['passthrough-decoder'] }
+tokio = { version = "1.0", features = ["rt-multi-thread"] }
+futures = "0.3"
+anyhow = "1.0"
+url = "2.3"
 
 [lib]
 name = "gstspotify"
