--- a/media-plugins/gst-plugins-rs/files/1.26.0/generic/threadshare/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/generic/threadshare/Cargo.toml
@@ -9,35 +9,35 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-async-task = "=4.3.0"
-cfg-if = "^1"
-concurrent-queue = "=2.2.0"
-flume = "^0.11"
-futures = "^0.3.28"
+async-task = "4.3.0"
+cfg-if = "1"
+concurrent-queue = "2.2.0"
+flume = "0.11"
+futures = "0.3.28"
 gio.workspace = true
 gst.workspace = true
 gst-audio.workspace = true
 gst-net.workspace = true
 gst-rtp.workspace = true
-pin-project-lite = "^0.2.0"
-polling = "=3.1.0"
-rand = "^0.9"
-rustix = { version = "^0.38.2", default-features = false, features = ["std", "fs", "net"] }
-slab = "^0.4.7"
-socket2 = {features = ["all"], version = "^0.5"}
-waker-fn = "^1.1"
-bitflags = "^2.6.0"
-libc = "^0.2"
-windows-sys = "=0.59.0"
+pin-project-lite = "0.2.0"
+polling = "3.1.0"
+rand = "0.9"
+rustix = { version = "0.38.2", default-features = false, features = ["std", "fs", "net"] }
+slab = "0.4.7"
+socket2 = {features = ["all"], version = "0.5"}
+waker-fn = "1.1"
+bitflags = "2.6.0"
+libc = "0.2"
+windows-sys = "0.59.0"
 [target.'cfg(not(target_os = "android"))'.dependencies]
-getifaddrs = "^0.1"
+getifaddrs = "0.1"
 
 
 # Used by examples
-clap = { version = "^4", features = ["derive"], optional = true }
+clap = { version = "4", features = ["derive"], optional = true }
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "=0.3.9", features = ["winsock2", "processthreadsapi"] }
+winapi = { version = "0.3.9", features = ["winsock2", "processthreadsapi"] }
 
 [dev-dependencies]
 gst-check.workspace = true
@@ -66,8 +66,8 @@ path = "examples/standalone/main.rs"
 
 [build-dependencies]
 gst-plugin-version-helper.workspace = true
-cc = "^1.0.38"
-pkg-config = "^0.3.15"
+cc = "1.0.38"
+pkg-config = "0.3.15"
 
 [features]
 static = []
