--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/aws/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/aws/Cargo.toml
@@ -11,38 +11,38 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-async-stream = "=0.3.4"
-base32 = "^0.5"
-aws-config = "^1.0"
-aws-sdk-s3 = "^1.0"
-aws-sdk-transcribestreaming = "^1.0"
-aws-sdk-translate = "^1.0"
-aws-types = "^1.0"
-aws-credential-types = "^1.0"
-aws-sdk-polly = "^1.0"
-bytes = "^1.0"
-futures = "^0.3"
+async-stream = "0.3.4"
+base32 = "0.5"
+aws-config = "1.0"
+aws-sdk-s3 = "1.0"
+aws-sdk-transcribestreaming = "1.0"
+aws-sdk-translate = "1.0"
+aws-types = "1.0"
+aws-credential-types = "1.0"
+aws-sdk-polly = "1.0"
+bytes = "1.0"
+futures = "0.3"
 gio.workspace = true
 gst.workspace = true
 gst-base.workspace = true
 gst-audio = { workspace = true, features = ["v1_16"] }
-percent-encoding = "^2"
-tokio = { version = "^1.0", features = [ "full" ] }
-serde = "^1"
-serde_derive = "^1"
-serde_json = "^1"
-serde_with = "^3"
-url = "^2"
+percent-encoding = "2"
+tokio = { version = "1.0", features = [ "full" ] }
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
+serde_with = "3"
+url = "2"
 gst-video = { workspace = true, features = ["v1_22"] }
-sprintf = "^0.4"
-anyhow = "^1"
+sprintf = "0.4"
+anyhow = "1"
 
 [dev-dependencies]
-chrono = { version = "^0.4", features = [ "alloc" ] }
-env_logger = "^0.11"
+chrono = { version = "0.4", features = [ "alloc" ] }
+env_logger = "0.11"
 gst-check = { workspace = true, features = ["v1_18"] }
-rand = "^0.9"
-test-with = { version = "^0.14", default-features = false }
+rand = "0.9"
+test-with = { version = "0.14", default-features = false }
 
 [lib]
 name = "gstaws"
