--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/hlsmultivariantsink/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/hlsmultivariantsink/Cargo.toml
@@ -12,25 +12,25 @@ rust-version.workspace = true
 gst.workspace = true
 gst-app.workspace = true
 gio.workspace = true
-m3u8-rs = "^6.0"
-chrono = "^0.4"
+m3u8-rs = "6.0"
+chrono = "0.4"
 gst-pbutils = { workspace = true, features = ["v1_22"] }
-anyhow = "^1"
-bitreader = "^0.3"
-bytes = "^1"
-byteorder = "^1.5"
-enumn = "^0.1"
-thiserror = "^2"
+anyhow = "1"
+bitreader = "0.3"
+bytes = "1"
+byteorder = "1.5"
+enumn = "0.1"
+thiserror = "2"
 
 [dev-dependencies]
 gst-audio.workspace = true
 gst-video.workspace = true
 gst-check.workspace = true
-m3u8-rs = "^6.0"
-anyhow = "^1"
+m3u8-rs = "6.0"
+anyhow = "1"
 gst-plugin-hlssink3 = { path = "../hlssink3" }
 gst-plugin-fmp4 = { path = "../../mux/fmp4" }
-serial_test = "^3"
+serial_test = "3"
 
 [build-dependencies]
 gst-plugin-version-helper.workspace = true
