--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/ndi/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/ndi/Cargo.toml
@@ -14,14 +14,14 @@ gst = { workspace = true, features = ["v1_16"] }
 gst-base = { workspace = true, features = ["v1_16"] }
 gst-audio = { workspace = true, features = ["v1_16"] }
 gst-video = { workspace = true, features = ["v1_16"] }
-anyhow = "^1.0"
-byte-slice-cast = "^1"
-byteorder = "^1.0"
-data-encoding = "^2.4.0"
-libloading = "^0.8"
-quick-xml = "^0.37"
-smallvec = { version = "^1.11", features = ["const_generics"] }
-thiserror = "^2"
+anyhow = "1.0"
+byte-slice-cast = "1"
+byteorder = "1.0"
+data-encoding = "2.4.0"
+libloading = "0.8"
+quick-xml = "0.37"
+smallvec = { version = "1.11", features = ["const_generics"] }
+thiserror = "2"
 
 [build-dependencies]
 gst-plugin-version-helper.workspace = true
