--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/quinn/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/quinn/Cargo.toml
@@ -14,28 +14,28 @@ rust-version.workspace = true
 glib.workspace = true
 gst.workspace = true
 gst-base = { workspace = true, features = ["v1_22"] }
-tokio = { version = "^1.36.0", default-features = false, features = ["time", "rt-multi-thread", "macros"] }
-futures = "^0.3.30"
-quinn = { version = "=0.11.5", default-features = false, features = ["ring", "rustls", "runtime-tokio", "log"] }
-quinn-proto ={ version = "=0.11.8", default-features = false, features = ["rustls", "log"] }
-rustls = { version = "^0.23", default-features = false, features = ["std"] }
-rustls-pemfile = "^2"
-rustls-pki-types = "^1"
-rcgen = "^0.13"
-bytes = "^1.5.0"
-thiserror = "^2"
-async-channel = "^2.3"
-itertools = "^0.14"
-env_logger = "^0.11"
-web-transport-quinn = "=0.3.3"
-url = "^2.5.2"
-once_cell = "=1.20.2"
+tokio = { version = "1.36.0", default-features = false, features = ["time", "rt-multi-thread", "macros"] }
+futures = "0.3.30"
+quinn = { version = "0.11.5", default-features = false, features = ["ring", "rustls", "runtime-tokio", "log"] }
+quinn-proto ={ version = "0.11.8", default-features = false, features = ["rustls", "log"] }
+rustls = { version = "0.23", default-features = false, features = ["std"] }
+rustls-pemfile = "2"
+rustls-pki-types = "1"
+rcgen = "0.13"
+bytes = "1.5.0"
+thiserror = "2"
+async-channel = "2.3"
+itertools = "0.14"
+env_logger = "0.11"
+web-transport-quinn = "0.3.3"
+url = "2.5.2"
+once_cell = "1.20.2"
 
 [dev-dependencies]
 gst-check = { workspace = true, features = ["v1_20"] }
-serial_test = "^3"
-ctrlc = "^3.4"
-clap = { version = "^4", features = ["derive"] }
+serial_test = "3"
+ctrlc = "3.4"
+clap = { version = "4", features = ["derive"] }
 
 [lib]
 name = "gstquinn"
