--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/relationmeta/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/relationmeta/Cargo.toml
@@ -14,8 +14,8 @@ gst-rtp = { workspace = true, features = ["v1_24"] }
 gst-base = { workspace = true, features = ["v1_24"] }
 gst-video = { workspace = true, features = ["v1_24"] }
 gst-analytics = { workspace = true }
-chrono = { version = "^0.4.31", default-features = false }
-xmltree = "^0.11"
+chrono = { version = "0.4.31", default-features = false }
+xmltree = "0.11"
 glib = { workspace = true, features = ["v2_62"] }
 
 [lib]
