--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/rtp/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/rtp/Cargo.toml
@@ -9,30 +9,30 @@ description = "GStreamer Rust RTP Plugin"
 rust-version.workspace = true
 
 [dependencies]
-anyhow = "^1"
-atomic_refcell = "^0.1"
-bitstream-io = "^2.4"
-byte-slice-cast = "^1.2"
-chrono = { version = "^0.4", default-features = false }
+anyhow = "1"
+atomic_refcell = "0.1"
+bitstream-io = "2.4"
+byte-slice-cast = "1.2"
+chrono = { version = "0.4", default-features = false }
 gst       = { workspace = true, features = ["v1_20"] }
 gst-audio = { workspace = true, features = ["v1_20"] }
 gst-base  = { workspace = true, features = ["v1_20"] }
 gst-net   = { workspace = true, features = ["v1_20"] }
 gst-rtp   = { workspace = true, features = ["v1_20"] }
 gst-video = { workspace = true, features = ["v1_20"] }
-futures = "^0.3"
+futures = "0.3"
 gio.workspace = true
-hex = "=0.4.3"
-log = "^0.4"
-rand = { version = "^0.9", default-features = false, features = ["std", "std_rng", "thread_rng" ] }
-rtp-types = { version = "^0.1" }
-rtcp-types = { version = "^0.1" }
-slab = "^0.4.9"
-smallvec = { version = "^1.11", features = ["union", "write", "const_generics", "const_new"] }
-thiserror = "^2"
-time = { version = "^0.3", default-features = false, features = ["std"] }
+hex = "0.4.3"
+log = "0.4"
+rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "thread_rng" ] }
+rtp-types = { version = "0.1" }
+rtcp-types = { version = "0.1" }
+slab = "0.4.9"
+smallvec = { version = "1.11", features = ["union", "write", "const_generics", "const_new"] }
+thiserror = "2"
+time = { version = "0.3", default-features = false, features = ["std"] }
 # TODO: experiment with other async executors (mio, async-std, etc)
-tokio = { version = "^1", default-features = false, features = ["rt-multi-thread", "time", "sync"] }
+tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time", "sync"] }
 
 [dev-dependencies]
 gst-check = { workspace = true, features = ["v1_20"] }
