--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/webrtc/protocol/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/webrtc/protocol/Cargo.toml
@@ -9,5 +9,5 @@ repository.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-serde = { version = "^1", features = ["derive"] }
-serde_json = "^1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
