--- a/media-plugins/gst-plugins-rs/files/1.26.0/net/webrtchttp/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/net/webrtchttp/Cargo.toml
@@ -14,12 +14,12 @@ rust-version.workspace = true
 gst.workspace = true
 gst-webrtc = { workspace = true, features = ["v1_18"] }
 gst-sdp.workspace = true
-reqwest = { version = "^0.12", features = ["default-tls"] }
-parse_link_header = {version = "^0.4", features = ["url"]}
-tokio = { version = "^1.20.1", default-features = false, features = ["time", "rt-multi-thread"] }
-futures = "^0.3.23"
-bytes = "^1"
-async-recursion = "=1.0.0"
+reqwest = { version = "0.12", features = ["default-tls"] }
+parse_link_header = {version = "0.4", features = ["url"]}
+tokio = { version = "1.20.1", default-features = false, features = ["time", "rt-multi-thread"] }
+futures = "0.3.23"
+bytes = "1"
+async-recursion = "1.0.0"
 
 [lib]
 name = "gstwebrtchttp"
