--- a/media-plugins/gst-plugins-rs/files/1.26.0/text/json/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/text/json/Cargo.toml
@@ -9,8 +9,8 @@ description = "GStreamer JSON Plugin"
 repository.workspace = true
 
 [dependencies]
-serde = { version = "^1.0", features = ["derive"] }
-serde_json = { version = "^1.0", features = ["raw_value"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0", features = ["raw_value"] }
 gst = { workspace = true, features = ["serde"]}
 
 [lib]
