--- a/media-plugins/gst-plugins-rs/files/1.26.0/utils/livesync/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/utils/livesync/Cargo.toml
@@ -14,8 +14,8 @@ gst.workspace = true
 gst-audio.workspace = true
 gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true }
 gtk = { workspace = true, optional = true }
-num-rational = { version = "^0.4", default-features = false, features = [] }
-parking_lot = "^0.12"
+num-rational = { version = "0.4", default-features = false, features = [] }
+parking_lot = "0.12"
 
 [dev-dependencies]
 gst-check.workspace = true
