--- a/media-plugins/gst-plugins-rs/files/1.26.0/video/gtk4/Cargo.toml
+++ b/media-plugins/gst-plugins-rs/files/1.26.0/video/gtk4/Cargo.toml
@@ -22,7 +22,7 @@ gst-allocators = { workspace = true, features = ["v1_24"], optional = true }
 gst-gl-wayland = { workspace = true, features = ["v1_16"], optional = true }
 gst-gl-x11 = { workspace = true, features = ["v1_16"], optional = true }
 gst-gl-egl = { workspace = true, features = ["v1_16"], optional = true }
-async-channel = "^2.0.0"
+async-channel = "2.0.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 gst-gl = { workspace = true, features = ["v1_16"] }
@@ -30,7 +30,7 @@ gst-gl = { workspace = true, features = ["v1_16"] }
 [target.'cfg(target_os = "windows")'.dependencies]
 gdk-win32.workspace = true
 gst-gl = { workspace = true, features = ["v1_20"] }
-windows-sys = { version = "^0.59", features = ["Win32_Graphics_OpenGL", "Win32_Foundation", "Win32_Graphics_Gdi"] }
+windows-sys = { version = "0.59", features = ["Win32_Graphics_OpenGL", "Win32_Foundation", "Win32_Graphics_Gdi"] }
 
 [lib]
 name = "gstgtk4"
